feat: GA/AMPLITUDE 삽입

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,9 @@
       gtag('js', new Date());
       gtag('config', 'G-NSHGVJ9ZKD');
     </script>
+
+<!-- ampltude-->
+    <script src="https://cdn.amplitude.com/libs/analytics-browser-2.11.1-min.js.gz"></script><script src="https://cdn.amplitude.com/libs/plugin-session-replay-browser-1.8.0-min.js.gz"></script><script>window.amplitude.add(window.sessionReplay.plugin({sampleRate: 1}));window.amplitude.init('e6c9d9349ca5492f5a4240167a1afaa1', {"autocapture":{"elementInteractions":true}});</script>
   
  <title>CA4U</title>
 </head>
